fixed dark mode bugs

--- a/public/css/dark/dark_main.css
+++ b/public/css/dark/dark_main.css
@@ -1,59 +1,43 @@
+/* styles.css */
+
 /* Apply some general styling */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+
+  .content {
+    font-size: 70;
+  }
+}
+
+html {
+  background-color: rgb(49, 49, 49)
+}
 
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: #1e1e1e; /* Dark background color */
-  color: #fff; /* Light text color */
-  display: flex; /* Use flexbox to fill the viewport */
-  flex-direction: column; /* Stack children vertically */
-  min-height: 100vh; /* Ensure body takes at least the viewport height */
-}
-.notice {
-  color: rgb(201, 198, 198);
-}
-
-h2 {
-  color: rgb(201, 198, 198);
-}
-html {
-  margin: 0px;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-/* Style for the top bar */
-.top-bar {
-  background-color: #252525; /* Darker background color for top bar */
-  color: #fff;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.username {
-  margin-right: 20px;
 }
 
 /* Style for the main content */
 .content {
-  background-color: #1e1e1e; /* Dark background color for content area */
   padding: 20px;
+  background-color: rgb(49, 49, 49)
 }
 
 /* Style for the list of chat rooms */
 .rooms {
-  background-color: #252525; /* Slightly lighter dark background color */
+  background-color: #4a4a4a;
   padding: 20px;
-  /* border-radius: 5px; */
+  border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  min-height: 100vh; /* Set minimum height to 100% of my viewport height:854.5px */
 }
 
 .rooms h2 {
   margin-bottom: 10px;
+  color: rgb(149, 149, 149)
 }
 
 .rooms ul {
@@ -61,15 +45,18 @@ html {
   padding: 0;
 }
 
+
 .rooms li {
   margin-bottom: 10px;
 }
-
 .normal-room {
-  color: #fff; /* Light text color */
+  color: rgb(255, 255, 255);
   text-decoration: none;
   transition: color 0.3s;
   position: relative;
+  @media screen and (max-width: 600px) {
+    font-size: 70vw
+  }
 }
 
 .normal-room::after {
@@ -93,10 +80,13 @@ html {
 }
 
 .private-room {
-  color: red;
+  color: rgb(255, 99, 99);
   text-decoration: none;
   transition: color 0.3s;
   position: relative;
+  @media screen and (max-width: 600px) {
+    font-size: 70vw
+  }
 }
 
 .private-room::after {
@@ -134,4 +124,18 @@ html {
 
 .add-room-button:hover {
   background-color: #0052a3;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgb(148, 148, 148);
+  color: white;
+}
+
+.footer a {
+  text-decoration: none;
+  color: rgb(223, 223, 223);
 }
