--- a/public/css/dark/dark_main_admin.css
+++ b/public/css/dark/dark_main_admin.css
@@ -15,7 +15,6 @@ body {
     margin: 0px;
     height: 100%;
     width: 100%;
-    overflow: hidden;
   }
   
   /* Style for the top bar */
@@ -154,3 +153,17 @@ body {
   .add-room-button:hover {
     background-color: #0052a3;
   }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(148, 148, 148);
+    color: white;
+ }
+
+ .footer a {
+  text-decoration: none;
+  color: rgb(223, 223, 223);
+}
