--- a/public/css/main_admin.css
+++ b/public/css/main_admin.css
@@ -12,6 +12,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow: scroll;
   }
   
   /* Style for the main content */
@@ -26,6 +27,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+  
   
   .rooms h2 {
     margin-bottom: 10px;
